Improve brand color function.

--- a/brandcolors.scss
+++ b/brandcolors.scss
@@ -1,218 +1,5 @@
-$brandcolors: (
-  "4ormat":          #fb0a2a,
-  "500px":           #00aeef,
-  about-me:          (#00405d, #062f3c, #2b82ad, #cc7a00, #ffcc33),
-  addvocate:         #ff3322,
-  adobe:             (#ff0000, #fbb034, #ffdd00, #c1d82f, #00a4e4, #8a7967, #6a737b),
-  aim:               #ffd900,
-  amazon:            (#ff9900, #146eb4),
-  android:           #a4c639,
-  angies-list:       #7fbb00,
-  aol:               (#ff0b00, #00c4ff),
-  arch-linux:        (#1793d1, #333333),
-  asana:             (#1f8dd6, #34ad00),
-  atlassian:         #003366,
-  behance:           #1769ff,
-  big-cartel:        (#a0ac48, #70b29c),
-  bing:              #ffb900,
-  bitbucket:         #205081,
-  bitly:             (#ee6123, #61b3de),
-  blogger:           #f57d00,
-  boeing:            #0039a6,
-  booking-com:       #003580,
-  carbonmade:        #613854,
-  cheddar:           #ff7243,
-  coca-cola:         #ed1c16,
-  code-school:       (#616f67, #c68143),
-  creative-market:   #8ba753,
-  delicious:         (#3399ff, #222222, #eeeeee),
-  dell:              (#0085c3, #7ab800, #f2af00, #dc5034, #ce1126, #b7295a, #6e2585, #71c6c1, #5482ab, #009bbb, #444444, #eeeeee),
-  designer-news:     #2d72d9,
-  designmoo:         (#e64b50, #dbc65d),
-  deviantart:        #4e6252,
-  devour:            #ff0000,
-  dewalt:            #febd17,
-  disqus:            #2e9fff,
-  django:            #092e20,
-  dribbble:          (#444444, #ea4c89, #8aba56, #ff8833, #00b6e3, #9ba5a8),
-  dropbox:           (#007ee5, #7b8994, #47525d, #3d464d),
-  drupal:            (#0077c0, #81ceff, #00598e),
-  dunked:            (#2f3238, #3fc380),
-  ebay:              (#e53238, #0064d2, #f5af02, #86b817),
-  engadget:          #40b3ff,
-  envato:            #82b541,
-  espn:              #ff0033,
-  etsy:              #d5641c,
-  evernote:          (#7ac142, #808084),
-  fab-com:           (#dd0017, #000000),
-  facebook:          #3b5998,
-  firefox:           (#e66000, #ff9500, #ffcb00, #00539f, #0095dd, #331e54, #002147),
-  flattr:            (#f67c1a, #338d11),
-  flickr:            (#0063dc, #ff0084),
-  forrst:            #5b9a68,
-  foursquare:        (#0072b1, #eeebac, #0cbadf, #8fd400, #ff7900, #ffcb00, #d1d4d3),
-  garmin:            #007cc3,
-  geocaching:        #4a742c,
-  ghost:             (#212425, #718087, #5ba4e5, #9fbb58, #e9e8dd),
-  gimmebar:          #d6156c,
-  github:            (#4183c4, #999999, #666666, #333333, #6cc644, #bd2c00, #ff9933),
-  gittip:            (#663300, #339966),
-  godaddy:           (#7db701, #ff8a00),
-  google:            (#4285f4, #db4437, #f4b400, #0f9d58, #e7e6dd),
-  google-plus:       #dd4b39,
-  grooveshark:       (#f86f09, #000000),
-  groupon:           #82b548,
-  hacker-news:       #ff6600,
-  hellowallet:       #0093d0,
-  heroku:            (#c9c3e6, #6762a6),
-  hootsuite:         (#003265, #f7e8d5, #ffbd0a, #c6af92, #71685f, #54493f, #38322d),
-  houzz:             (#7ac142, #000000),
-  hp:                (#0096d6, #d7410b),
-  hsbc:              #db0011,
-  html5:             #e34f26,
-  hulu:              (#a5cd39, #6bb03e),
-  ibm:               #006699,
-  ikea:              (#ffcc00, #003399),
-  imdb:              #f5de50,
-  instagram:         #3f729b,
-  instapaper:        (#000000, #428bca),
-  intel:             #0071c5,
-  intuit:            #365ebf,
-  kickstarter:       (#2bde73, #0f2105),
-  kippt:             #d51007,
-  kiwipay:           #00b0df,
-  lastfm:            #c3000d,
-  linkedin:          (#0976b4, #000000),
-  livestream:        (#cf202e, #232121, #f78822, #f6db35, #6dc067, #4185be, #8f499c),
-  lumo:              #576396,
-  meetup:            #e0393e,
-  microsoft:         (#f65314, #7cbb00, #00a1f1, #ffbb00),
-  microsoft-office:  #ea3e23,
-  mixpanel:          #a086d3,
-  motorola:          #5c92fa,
-  netflix:           #b9090b,
-  nokia:             #124191,
-  nvidia:            #76b900,
-  odnoklassniki:     #ed812b,
-  opera:             (#cc0f16, #9c9e9f),
-  pandora:           #005483,
-  path:              #ee3423,
-  paypal:            (#253b80, #179bd7),
-  pinboard:          #0000e6,
-  pinterest:         #cc2127,
-  plasso:            (#6585ed, #f5756c, #98afc0, #2f3148),
-  playstation:       #003087,
-  pocket:            (#d3505a, #478f8f),
-  prezi:             #318bff,
-  quora:             #a82400,
-  quote-fm:          #66ceff,
-  rdio:              #007dc3,
-  readability:       #990000,
-  red-hat:           #cc0000,
-  reddit:            (#ff4500, #5f99cf, #cee3f8),
-  reverbnation:      #e43526,
-  rockpack:          #0ba6ab,
-  roon:              #62b0d9,
-  rss:               #f26522,
-  salesforce:        (#1798c1, #ff1100),
-  samsung:           (#1428a0, #75787b, #0689d8, #ffc600, #ff6900, #e4002b, #c800a1, #685bc7, #0057b8, #00a9e0, #009ca6, #00b140),
-  shopify:           (#96bf48, #479ccf, #2d3538, #f5f5f5, #f2f7fa, #666666),
-  skype:             #00aff0,
-  smashing-magazine: (#e53b2c, #41b7d8),
-  snagajob:          #f47a20,
-  softonic:          #008ace,
-  soundcloud:        (#ff8800, #ff3300),
-  spotify:           #7ab800,
-  sprint:            #ffe100,
-  squarespace:       #222222,
-  stackoverflow:     #fe7a15,
-  staples:           (#cc0000, #2c8aec, #ffcc00),
-  status-chart:      #d7584f,
-  strava:            #fc4c02,
-  stripe:            #00afe1,
-  studyblue:         #00afe1,
-  stumbleupon:       #eb4924,
-  t-mobile:          #e20074,
-  technorati:        #339900,
-  the-next-web:      (#ff3c1f, #26313b, #4e5860, #a6abaf, #d9e0e2, #fafbfc),
-  treehouse:         (#6fbc6d, #47535b),
-  trello:            #256a92,
-  trulia:            #5eab1f,
-  tumblr:            #35465c,
-  tvtag:             #f24e4e,
-  twitch-tv:         #6441a5,
-  twitter:           #55acee,
-  typekit:           #98ce1e,
-  typo3:             #ff8600,
-  ubuntu:            (#dd4814, #77216f, #5e2750, #2c001e, #aea79f, #333333),
-  univision:         #c822b0,
-  ustream:           #3388ff,
-  verizon:           (#ff0000, #f2f2f2, #3285dc),
-  vimeo:             (#162221, #1ab7ea),
-  vine:              #00b488,
-  virb:              #1e91d0,
-  virgin-media:      (#c3092d, #222221),
-  vkontakte:         #45668e,
-  windows:           #00bcf2,
-  windows-phone:     #68217a,
-  wooga:             #5b009c,
-  wordpress:         (#21759b, #d54e21, #464646),
-  wordpress-com:     #1e8cbe,
-  wunderlist:        #2b96f1,
-  xbox:              #52b043,
-  xing:              (#026466, #cfdc00),
-  yahoo:             #400191,
-  yandex:            #ffcc00,
-  yelp:              #af0606,
-  youtube:           (#e52d27, #b31217, #000000),
-  zendesk:           (#78a300, #f1f1f1, #444444),
-  zerply:            #9dbc7a,
-  zopim:             #ff9d3b,
-);
+@charset "utf-8";
 
-
-@function str-replace($string, $search, $replace: '') {
-  $index: str-index($string, $search);
-  @if $index {
-    @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
-  }
-  @return $string;
-}
-
-@function to-string($value) {
-  @return inspect($value);
-}
-
-
-@function brandcolor($name,$number:1) {
-  $string-name: to-string($name);
-  $string-name: str-replace($string-name," ","-");
-  $string-name: str-replace($string-name,"_","-");
-
-  $brand-key:   $string-name;
-  $brand-name:  str-replace($brand-key,"-"," ");
-  $brand-color: ();
-
-  @if map-has-key($brandcolors, $brand-key) {
-    $brand-color:        map-get($brandcolors, $brand-key);
-    $brand-color-type:   type-of($brand-color);
-    $brand-color-length: length($brand-color);
-
-    @if $brand-color-length < $number {
-      @error "`#{$brand-name}` has only #{$brand-color-length} colors and you're asking for number `#{$number}`";
-    }
-    @else if $brand-color-type == list {
-      $brand-color: nth($brand-color, $number);
-    }
-  }
-  @else {
-    @error "The brand you are looking for does not exist or is misspelled: '#{$string-name}'";
-  }
-
-  $brand-color-type: type-of($brand-color);
-  @if $brand-color-type != color {
-    @error "The color number `#{$number}` of `#{$brand-name}` is not a valid color: `#{$brand-color}`";
-  }
-
-  @return $brand-color;
-}
+@import "colors";
+@import "utilities";
+@import "function";
