Add all colors from brandcolors.net.

--- a/_colors.scss
+++ b/_colors.scss
@@ -124,7 +124,7 @@ $brandcolors: (
   flixster: (#2971b2),
   follr: (#4dc9f6,#f67019,#f53794,#537bc4,#acc236),
   ford: (#1c396d),
-  4ormat: (#ee3440),
+  "4ormat": (#ee3440),
   forrst: (#5b9a68),
   foursquare: (#f94877,#0732a2,#2d5be3),
   friend2friend: (#0f99d6),
